# capture

./: .env.example  LICENSE  Project_Outline (GPT).md  README.md
contracts/: api.md  capture.schema.json
docs/: architecture.md  backend-stress-report-2026-07-18.md  branch-layout.md  browser-inline-capture-development-record.md  decisions.md  (+7 more)
services/backend/: README.md  pyproject.toml
services/backend/app/: __init__.py  __main__.py  api_errors.py  api_models.py  checklist.py  config.py  cors.py  database.py  embeddings.py  enrichment.py  image_enrichment.py  limits.py  main.py  models.py  repository.py  search.py
services/backend/app/migrations/: 001_initial_captures.sql  002_fts5_keyword_search.sql  005_user_editing.sql
services/backend/app/schemas/: enriched_capture.schema.json
services/backend/app/static/: checklist.html
services/backend/mema_backend/: __init__.py  __main__.py  api_errors.py  api_models.py  attachments.py  config.py  cors.py  database.py  embeddings.py  enrichment.py  image_enrichment.py  limits.py  main.py  models.py  ocr.py  repository.py  search.py
services/backend/mema_backend/migrations/: 003_screenshot_source_type.sql  004_image_attachments.sql
services/backend/mema_backend/schemas/: image_enrichment.schema.json
services/backend/tests/: test_api.py  test_checklist.py  test_config.py  test_cors.py  test_database.py  test_dev_script.py  test_embeddings.py  test_enrichment.py  test_health.py  test_image_captures.py  test_image_enrichment.py  test_ocr.py  test_packaging.py  test_repository.py  test_search.py
services/backend/tools/: stress_backend.py
(+110 files in other folders)
