[build-system]
requires = ["setuptools>=68", "wheel>=0.43,<1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mema-backend"
version = "1.0.0"
description = "Local FastAPI backend for Mema"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=2.46,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
mema-backend = "mema_backend.__main__:main"

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<10",
  "setuptools>=68",
  "wheel>=0.43,<1.0",
]

[tool.setuptools.package-data]
mema_backend = ["migrations/*.sql", "schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
